[package]
description = "Frontier Deep Mind Implementations"
name = "deepmind"
version = "0.0.1"
authors = ["dfuse Developers <developers@dfuse.io>"]
edition = "2018"

[dependencies]
ethereum-types = { workspace = true }
rustc-hex = "2.1.0"
serde = "1.0"
serde_json = "1.0"
ethereum = { workspace = true, features = ["with-codec"] }
fp-ethereum = { workspace = true }
frame-support = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
	"ethereum-types/std",
	"rustc-hex/std",
	"serde/std",
	"serde_json/std",
	"ethereum/std",
	"scale-info/std",
	# Substrate
	"frame-support/std",
	"sp-std/std",
	# Frontier
	"fp-ethereum/std",
]
